# yolov11_pose_track

./: CMakeLists.txt  README.md  package.xml
src/: CMakeLists.txt  main copy.cc  main.cc  yolov11_pose.cc  yolov11_pose.h  yolov11_pose_track.cc  yolov11pose_node.cc
src/bytetrack/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h  bytetrack.txt
